--- a/package.json
+++ b/package.json
@@ -14,11 +14,11 @@
   "author": "Luca Maltempo",
   "license": "ISC",
   "dependencies": {
+    "@sequelize/core": "^7.0.0-alpha.10",
     "cors": "^2.8.5",
     "express": "^4.18.2",
     "mysql2": "^3.1.1",
     "nodemon": "^2.0.20",
-    "sequelize": "^6.28.0",
     "sequelize-cli": "^6.6.0"
   },
   "devDependencies": {
