--- a/package.json
+++ b/package.json
@@ -16,7 +16,9 @@
   "dependencies": {
     "@sequelize/core": "^7.0.0-alpha.10",
     "cors": "^2.8.5",
+    "dotenv": "^16.0.3",
     "express": "^4.18.2",
+    "helmet": "^6.0.1",
     "mysql2": "^3.1.1",
     "nodemon": "^2.0.20",
     "sequelize-cli": "^6.6.0"
