--- a/package.json
+++ b/package.json
@@ -2,11 +2,11 @@
   "name": "gymhub_be",
   "version": "1.0.0",
   "description": "",
-  "main": "app.ts",
+  "main": "src/app.ts",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon app.ts",
-    "start-prod": "node app.ts"
+    "start": "nodemon src/app.ts",
+    "start-prod": "node src/app.ts"
   },
   "repository": {
     "type": "git",
