--- a/package.json
+++ b/package.json
@@ -25,13 +25,11 @@
     "morgan": "^1.10.0",
     "mysql2": "^3.1.1",
     "nodemon": "^2.0.20",
-    "sequelize-cli": "^6.6.0",
-    "winston": "^3.8.2"
+    "sequelize-cli": "^6.6.0"
   },
   "devDependencies": {
     "@types/cors": "^2.8.13",
     "@types/express": "^4.17.17",
-    "@types/morgan": "^1.9.4",
     "@types/node": "^18.11.18"
   }
 }
