--- a/package.json
+++ b/package.json
@@ -15,16 +15,16 @@
   "author": "Luca Maltempo",
   "license": "ISC",
   "dependencies": {
-    "@sequelize/core": "^7.0.0-alpha.10",
     "bcrypt": "^5.1.0",
     "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "helmet": "^6.0.1",
-    "mysql2": "^3.1.1",
+    "knex": "^2.4.2",
+    "mysql": "^2.18.1",
     "nodemon": "^2.0.20",
-    "sequelize-cli": "^6.6.0"
+    "yup": "^1.0.0"
   },
   "devDependencies": {
     "@types/cors": "^2.8.13",
