--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "knex": "^2.4.2",
     "mysql": "^2.18.1",
     "nodemon": "^2.0.20",
+    "ts-node": "^10.9.1",
     "yup": "^1.0.0"
   },
   "devDependencies": {
