--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "mysql": "^2.18.1",
     "nodemon": "^2.0.20",
     "ts-node": "^10.9.1",
+    "typescript": "^5.0.2",
     "yup": "^1.0.0"
   },
   "devDependencies": {
