--- a/package.json
+++ b/package.json
@@ -33,5 +33,8 @@
     "@types/cors": "^2.8.13",
     "@types/express": "^4.17.17",
     "@types/node": "^18.11.18"
+  },
+  "engines": {
+    "node": "16.16.0"
   }
 }
