--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start-test": "nodemon src/app.ts",
-    "start": "node src/app.ts"
+    "start": "nodemon src/app.ts"
   },
   "repository": {
     "type": "git",
