--- a/package.json
+++ b/package.json
@@ -25,14 +25,14 @@
     "knex": "^2.4.2",
     "mysql": "^2.18.1",
     "nodemon": "^2.0.20",
-    "ts-node": "^10.9.1",
-    "typescript": "^5.0.2",
     "yup": "^1.0.0"
   },
   "devDependencies": {
     "@types/cors": "^2.8.13",
     "@types/express": "^4.17.17",
-    "@types/node": "^18.11.18"
+    "@types/node": "^18.11.18",
+    "ts-node": "^10.9.1",
+    "typescript": "^5.0.2"
   },
   "engines": {
     "node": "16.16.0"
