--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "main": "src/app.ts",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start-test": "nodemon src/app.ts",
-    "start": "node src/app.ts"
+    "start": "nodemon src/app.ts",
+    "start-prod": "node src/app.ts"
   },
   "repository": {
     "type": "git",
