--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "nodemon src/app.ts",
-    "start-prod": "node src/app.ts"
+    "start-prod": "node src/app.ts",
+    "build": "tsc"
   },
   "repository": {
     "type": "git",
