--- a/package.json
+++ b/package.json
@@ -28,7 +28,10 @@
     "nodemon": "^2.0.20",
     "ts-node": "^10.9.1",
     "typescript": "^5.0.2",
-    "yup": "^1.0.0"
+    "yup": "^1.0.0",
+    "@types/cors": "^2.8.13",
+    "@types/express": "^4.17.17",
+    "@types/node": "^18.11.18"
   },
   "devDependencies": {
     "@types/cors": "^2.8.13",
