--- a/package.json
+++ b/package.json
@@ -15,6 +15,10 @@
   },
   "author": "Luca Maltempo",
   "license": "ISC",
+  "engines": {
+    "node": "16.x",
+    "npm": "9.x"
+  },
   "dependencies": {
     "bcrypt": "^5.1.0",
     "bcryptjs": "^2.4.3",
