--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "main": "src/app.ts",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start-test": "nodemon src/app.ts",
-    "start": "tsc && node dist/app.js",
+    "start": "nodemon src/app.ts",
+    "start-aaa": "tsc && node dist/app.js",
     "build": "tsc"
   },
   "repository": {
