--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "nodemon src/app.ts",
-    "start-aaa": "tsc && node dist/app.js",
+    "start-prod": "tsc && node dist/app.js",
     "build": "tsc"
   },
   "repository": {
